--- a/embedded/nano-proto/Cargo.toml
+++ b/embedded/nano-proto/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "arduino-blink"
+name = "nano-proto"
 version = "0.1.0"
 
 [profile.dev]
@@ -11,12 +11,9 @@ panic = "abort"
 [dependencies]
 panic-halt = "0.2.0"
 embedded-hal = "0.2.3"
+hex = { version = "0.4", default-features = false }
 
 [dependencies.arduino-hal]
 git = "https://github.com/Rahix/avr-hal"
 rev = "4f8ab2594d4497bdfbd57b641c05c407f3b309f5"
 features = ["arduino-nano"]
-
-[dependencies.ruduino]
-git = "https://github.com/avr-rust/ruduino"
-rev = "61a8e0d1447bf4cd8ee329b608807ba2ea38a9c2"
